--- a/src/FuGu/FuGu.scss
+++ b/src/FuGu/FuGu.scss
@@ -14,6 +14,18 @@
 body {
 	background-color: rgb(255,111,97);
 }
+header {
+    height:100px;
+    width:100%;
+    background: #3C3D41;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: normal;
+}
+.container {
+    display: flex;
+}
 .flex-menu {
     display: flex;
     justify-content: space-between;
@@ -22,13 +34,13 @@ body {
      display: flex;
  }
  .text {
-    margin-left: 10%;
+    margin-left: 5%;
  }
 
 footer {
     margin-top:50px;
     height:100px;
-    width:100%px;
+    width:100%;
     background: #3C3D41;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -53,5 +65,55 @@ footer {
     }
 
 
+    .nav_list {
+        margin:20px;
+        width:200px;
+        list-style:none;
+        
+        }
+        .nav_list li {
+        position:relative;
+        }
+        .nav_list li a {
+        padding:5px 10px 5px 20px;
+        display:block;
+        font-size:20px;
+        font-weight:bold;
+        color:rgb(0,0,0);
+        text-decoration:none;
+        background-color: rgb(234, 250, 176);
+        border-bottom:1px solid rgb(0,0,0);
+        }
+        .nav_list li span {
+        width:0;
+        height:0;
+        position:absolute;
+        top:11px;
+        left:6px;
+        border-top:3px solid transparent;
+        border-bottom:3px solid transparent;
+        border-left:6px solid rgb(0,0,0);
+        }
+        .nav_list li.active span {
+        border-top:6px solid rgb(0,0,0);
+        border-left:3px solid transparent;
+        border-right:3px solid transparent;
+        }
+        
+        .nav_list ul {
+        margin:0;
+       width: 100%;
+        display:none;
+        list-style:none;
+        }
+        .nav_list ul li {
+        position:static;
+        }
+        .nav_list ul a  {
+            padding-left:0;
+        font-size:17px;
+        color:rgb(0,0,0);
+        background-color: rgb(234, 250, 176);
+        }
 
   
